deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: development
  template:
    metadata:
      labels:
        app: development
    spec:
      containers:
        - image: nginx
          name: mycontainer
          ports:
            - containerPort: 80
